--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,3 @@
-body{
-    background-color: blanchedalmond;
-}
 .header{
     background-color: blueviolet;
 }
@@ -28,3 +25,67 @@ body{
 .picture{
     background-color: rgb(243, 0, 0);
 }
+
+.foto1, .foto2, .foto3, .foto4, .foto5, .foto6{
+    border: 1px solid black;
+    height: 250px;
+}
+
+.about{
+    background-color: rgb(26, 188, 156);
+    display: flex;
+    justify-content: center;
+}
+
+.abaut-tex{
+    display: flex;
+    justify-content: center;
+    border: 1px solid black;
+}
+
+.download{
+    display: flex;
+    justify-content: center;
+    border: 1px solid black;
+}
+
+.tex1, .tex2{
+    border: 1px solid black;
+    height: 250px;
+}
+
+.contact-me{
+    background-color: white;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+}
+
+.contact-me-title{
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+}
+
+.form{
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+}
+
+.footer{
+    background-color: rgb(58, 84, 109);
+    display: flex;
+    justify-content: center;
+}
+
+.location, .around, .freelancer{
+    border: 1px solid black;
+    height: 250px;
+}
+
+.copyright{
+    background-color: rgb(44, 62, 80);
+    height: 100px;
+}
+
