--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,17 @@
+body{
+    text-align: center;
+}
 .bg-blue{
     background-color: #2c3e50;
 }
-
+.avatar{
+    max-width: 250px;
+}
+.main{
+    background-color: rgb(23, 190, 140);
+    color: white;
+    
+}
 
 
 
@@ -21,10 +31,6 @@
     height: 70px;
 }
 
-.main{
-    background-color: rgb(23, 190, 140);
-    height: 400px;
-}
 
 .profilo{
     background-color: rgb(255, 255, 255);
