--- a/style/style.css
+++ b/style/style.css
@@ -10,9 +10,7 @@ body{
 .main{
     background-color: rgb(23, 190, 140);
     color: white;
-    
 }
-
 
 
 
@@ -32,18 +30,11 @@ body{
 }
 
 
-.profilo{
-    background-color: rgb(255, 255, 255);
-    height: 100px;
-}
-
-.picture{
-    background-color: rgb(243, 0, 0);
-}
 
 .foto1, .foto2, .foto3, .foto4, .foto5, .foto6{
-    border: 1px solid black;
-    height: 250px;
+    height: 300px;
+    justify-content: center;
+    display: flex;
 }
 
 .about{
